<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="one">One</string>
    <string name="in">In</string>
    <string name="equal">Is Equal To</string>
    <string name="result">Click Calculate for Result</string>
    <string name="calculate">Calculate</string>
    <string name="powered">Powered By Yahoo! Finance</string>

    <string name="app_name">CurrencyConverter</string>
    <string-array name="name">
        <item>US Dollar</item>
        <item>Japanese Yen</item>
        <item>Bulgarian Lev</item>
        <item>Czech Koruna</item>
        <item>Danish Krone</item>
        <item>EU Euro</item>
        <item>Great Britain Pounds</item>
        <item>Hungarian Forint</item>
        <item>Polish Złoty</item>
        <item>Romanian Leu</item>
        <item>Swedish Krona</item>
        <item>Swiss Franc</item>
        <item>Icelandic Krona</item>
        <item>Norwegian Krone</item>
        <item>Croatian Kuna</item>
        <item>Russian Ruble</item>
        <item>Turkish Lira</item>
        <item>Australian Dollar</item>
        <item>Brazilian Real</item>
        <item>Canadian Dollar</item>
        <item>Chinese Yuan</item>
        <item>Hong Kong Dollar</item>
        <item>Indonesian Rupiah</item>
        <item>Israeli New Shekel</item>
        <item>Indian Rupee</item>
        <item>South Korean Won</item>
        <item>Mexican Peso</item>
        <item>Malaysian Ringgit</item>
        <item>New Zealand Dollar</item>
        <item>Philippine Peso</item>
        <item>Singapore Dollar</item>
        <item>Thai Baht</item>
        <item>South African Rand</item>
    </string-array>
    <string-array name="value">
        <item>USD</item>
        <item>JPY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>ISK</item>
        <item>NOK</item>
        <item>HRK</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>SGD</item>
        <item>THB</item>
        <item>ZAR</item>
    </string-array>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_number_systems">NumberSystems</string>
    <string name="button_temperature">Temperature</string>
    <string name="button_time">Time</string>
    <string name="button_length">Length</string>
    <string name="button_mass">Mass</string>
    <string name="button_area">Area</string>
    <string name="button_volume">Volume</string>
    <string name="button_currency">Currency</string>
    <string name="button_energy">Energy</string>
    <string name="number_systems">Scales of notation</string>
    <string name="valuee1">joules</string>
    <string name="valuee2">kilojoules</string>
    <string name="valuee3">megajoules</string>
    <string name="valuee4">horsepowers hour</string>
    <string name="valuee5">calories</string>
    <string name="valuee6">kilokalories</string>
    <string name="valuee7">megakalories</string>
    <string name="valuee8">kilowatts hour</string>
    <string name="valuee9">watts hour</string>
    <string name="valuee10">watts second</string>
    <string name="valuee11">electronvolts</string>
</resources>